fixed bug that caused image to overflow, changed padding on small devices

--- a/_sass/base/_functional.scss
+++ b/_sass/base/_functional.scss
@@ -48,7 +48,7 @@
   }
 
   &.bold.below-hr {
-    padding-top: 25px;
+    padding-top: 0;
   }
 }
 
